# ElectroSolve

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: component.rs  errors.rs  graph.rs  lib.rs  reduce.rs  units.rs
crates/core/tests/: circuit_reduction.rs  components_physics.rs  graph_topology.rs  passivity.rs  reduction_arithmetic.rs  unit_properties.rs
crates/core/tests/common/: mod.rs  strategies.rs
crates/dsl/: Cargo.toml
crates/dsl/src/: ast.rs  lib.rs
electrosolve/: circuit.py  parser.py  solver_dc.py  symbolic_handler.py
examples/: simple_dc.json
src/: component.rs  errors.rs  graph.rs  lib.rs  main.rs  parser.rs  reduce.rs  units.rs
tests/: circuit_reduction.rs  graph_topology.rs  passivity.rs  reduction_arithmetic.rs  test_dc_circuits.py  test_parser.py
tests/common/: mod.rs  strategies.rs
