[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/dsl",
    "crates/cli",
]

[workspace.dependencies]
nalgebra = "0.34.1"
num-complex = "0.4.6"
thiserror = "2.0.17"
clap = { version = "4.5.54", features = ["derive"] }
approx = "0.5.1"
proptest = "1.9"
chumsky = "0.9.3"
miette = { version = "7.2", features = ["fancy"] }