[tool.poetry]
name = "electrosolve"
version = "0.1.0"
description = "ElectroSolve: An intuitive Python-based electric circuit solver. Aims to calculate circuit variables (voltages, currents) and provide step-by-step solution verification for EE students and enthusiasts."
authors = ["khengari77 <khengari77@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.6"
scipy = "^1.15.3"
sympy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
